k8s/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  namespace: llama-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  
  template:
    metadata: 
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama-backend
          image: ollama/ollama:0.33.2
          ports:
            - containerPort: 11434
          resources:
            requests:
              cpu: '1000m'
              memory: '4Gi'
            limits: 
              cpu: '2000m'
              memory: '8Gi'
      
          volumeMounts:
            - name: ollama
              mountPath: /root/.ollama

          startupProbe:
            exec:
              command: ["ollama", "list"]
            periodSeconds: 10
            failureThreshold: 30

          readinessProbe:
            exec:
              command: ["ollama", "list"]
            periodSeconds: 30
            failureThreshold: 2

          livenessProbe:
            exec:
              command: ["ollama", "list"]
            periodSeconds: 10
            failureThreshold: 5

      volumes: 
        - name: ollama
          persistentVolumeClaim:
            claimName: ollama-pvc
