k8s/open-webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
  namespace: llama-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui-service
        image: ghcr.io/open-webui/open-webui:v0.11.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "1.5Gi"
            cpu: "1500m"
        ports:
        - containerPort: 8080

        volumeMounts:
          - name: open-webui-volume
            mountPath: /app/backend/data

        startupProbe:
          httpGet:
            port: 8080
            path: /healthz
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 60
        
        readinessProbe:
          httpGet:
            port: 8080
            path: /healthz
          periodSeconds: 5
          failureThreshold: 2

        livenessProbe:
          httpGet:
            port: 8080
            path: /healthz
          periodSeconds: 10
          failureThreshold: 3

      volumes: 
        - name: open-webui-volume
          persistentVolumeClaim:
            claimName: open-webui-pvc
