k8s/open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: llama-chat
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
